--- a/blog/2020-3-18-textCNN.md
+++ b/blog/2020-3-18-textCNN.md
@@ -2,7 +2,7 @@
 id: welcome
 title: Welcome
 author: 招晓贤
-author_title: Front End Engineer @ Facebook
+author_title: AI Engineer
 author_url: https://github.com/flybirdgroup
 author_image_url: https://ss3.bdstatic.com/70cFv8Sh_Q1YnxGkpoWK1HF6hhy/it/u=1615738601,1434436036&fm=26&gp=0.jpg
 tags: [facebook, hello, docusaurus]
