--- a/blog/2020-3-18-textCNN.md
+++ b/blog/2020-3-18-textCNN.md
@@ -194,7 +194,7 @@ fig2.savefig('accuracy_cnn.png')
 plt.show()
 ```
 
-![png](../static/img/output_9_0.png)
+![png](img/output_9_0.png)
 
 
 ### 4.模型结构打印
