--- a/blog/2020-03-18-word2vec.md
+++ b/blog/2020-03-18-word2vec.md
@@ -9,7 +9,7 @@ tags: [facebook, hello, docusaurus]
 ---
 ## 什么是Word2Vec和Embeddings？
 我们可以简单认为Word2Vec就是把词语向量化，也就是每个我们对于一个语料库进行学习后，每个单词都有对应的坐标位置，这时候，通过每个单词的坐标位置，我们可以通过余弦定理推导出两个词语，短语或者句子的相似程度。这里可以参考我参与的云润大数据舆情系统的词云项目，[关键词匹配](https://github.com/weijiang2009/URun.ResearchPrototype/tree/dev/Projects/WordCloud/src/words_similarity_xiaoxian)
-![jpeg](../static/img/word2vec.jpeg)
+![jpeg](../img/word2vec.jpeg)
 <!--truncate-->
 那么它是如何帮助我们做自然语言处理呢？Word2Vec其实就是通过学习文本来用词向量的方式表征词的语义信息，即通过一个嵌入空间使得语义上相似的单词在该空间内距离很近。
 Embedding其实就是一个映射，将单词从原先所属的空间映射到新的多维空间中，也就是把原先词所在空间嵌入到一个新的空间中去。
