--- a/blog/2020-3-18-textCNN.md
+++ b/blog/2020-3-18-textCNN.md
@@ -19,7 +19,7 @@ TextCNN出处：论文[Convolutional Neural Networks for Sentence Classification
 
 ### 论文核心点
 
-![png](img/TextCNN.png)
+![png](../img/TextCNN.png)
 
 1. Represent sentence with **static and non-static channels**.
 2. **Convolve** with multiple filter widths and feature maps.
@@ -43,7 +43,7 @@ TextCNN出处：论文[Convolutional Neural Networks for Sentence Classification
 TextCNN 的网络结构：
 
 
-![png](../static/img/TextCNN_network_structure.png)
+![png](../img/TextCNN_network_structure.png)
 
 
 
@@ -180,7 +180,7 @@ plt.title('Loss Curves :CNN',fontsize=16)
 fig1.savefig('loss_cnn.png')
 plt.show()
 ```
-![png](../static/img/output_8_0.png)
+![png](../img/output_8_0.png)
 
 ```python
 fig2=plt.figure()
@@ -194,7 +194,7 @@ fig2.savefig('accuracy_cnn.png')
 plt.show()
 ```
 
-![png](img/output_9_0.png)
+![png](../img/output_9_0.png)
 
 
 ### 4.模型结构打印
@@ -204,7 +204,7 @@ plt.show()
 from tensorflow.keras.utils import plot_model
 plot_model(model, show_shapes=True, show_layer_names=True)
 ```
-![png](../static/img/CNN_structure.png)
+![png](../img/CNN_structure.png)
 
 
 
@@ -232,9 +232,9 @@ print(model.predict(text_input))
 ```python
 docker run -p 127.0.0.1:80:5000/tcp flybirdgroup/classifier
 ```
-![png](../static/img/docker1.png)
+![png](../img/docker1.png)
 
-![png](../static/img/docker2.png)
+![png](../img/docker2.png)
 
 
 
