--- a/blog/2020-3-18-textCNN.md
+++ b/blog/2020-3-18-textCNN.md
@@ -1,6 +1,6 @@
 ---
 id: welcome
-title: Welcome
+title: textCNN卷积神经网络分类
 author: 招晓贤
 author_title: AI Engineer
 author_url: https://github.com/flybirdgroup
@@ -19,7 +19,7 @@ TextCNN出处：论文[Convolutional Neural Networks for Sentence Classification
 
 ### 论文核心点
 
-![png](../img/TextCNN.png)
+![png](../img/CNN/TextCNN.png)
 
 1. Represent sentence with **static and non-static channels**.
 2. **Convolve** with multiple filter widths and feature maps.
@@ -43,7 +43,7 @@ TextCNN出处：论文[Convolutional Neural Networks for Sentence Classification
 TextCNN 的网络结构：
 
 
-![png](../img/TextCNN_network_structure.png)
+![png](../img/CNN/TextCNN_network_structure.png)
 
 
 
@@ -204,7 +204,7 @@ plt.show()
 from tensorflow.keras.utils import plot_model
 plot_model(model, show_shapes=True, show_layer_names=True)
 ```
-![png](../img/CNN_structure.png)
+![png](../img/CNN/CNN_structure.png)
 
 
 
@@ -232,9 +232,9 @@ print(model.predict(text_input))
 ```python
 docker run -p 127.0.0.1:80:5000/tcp flybirdgroup/classifier
 ```
-![png](../img/docker1.png)
+![png](../img/CNN/docker1.png)
 
-![png](../img/docker2.png)
+![png](../img/CNN/docker2.png)
 
 
 
